--- a/Client/package.json
+++ b/Client/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:fast": "NODE_ENV=production next build --no-lint",
+    "build:analyze": "ANALYZE=true next build",
     "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
